--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "passport-http-bearer",
   "version": "1.0.0",
-  "description": "",
+  "description": "la mejor libreria del universo, unica, inigualable, increible y soperaaa.",
   "type": "module",
   "main": "app.js",
   "scripts": {
-    "dev": "nodemon --quiet ./ap.js"
+    "dev": "nodemon --quiet ./app.js"
   },
   "keywords": [],
   "author": "",
@@ -13,6 +13,7 @@
   "devDependencies": {
     "dotenv": "16.3.1",
     "express": "4.18.2",
+    "mongodb": "5.7.0",
     "nodemon": "3.0.1",
     "passport": "0.6.0",
     "passport-http-bearer": "1.0.1"
